--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>The Spicy Lounge</h1></a>
+            <a href="index.html"><h1>Shanghai's Spices</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Nirvanacertification">
               <span>Nirvana Certified</span>
@@ -64,9 +64,9 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:799-223-1476">
+    <a class="btn" href="tel:00-0000-0000">
     <span class="glyphicon glyphicon-earphone"></span>
-    799-223-1476
+      00-0000-0000
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver at Your Home</div>
@@ -85,8 +85,8 @@
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          Saraitikar Road<br>
-          Burdwan, UIT
+          Saki-naka<br>
+          Mumbai, India
           <p>* Delivery area within 3-4 Km, with minimum order of Rs.20 plus Rs.3 charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
