--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -78,9 +78,9 @@
       <div class="row">
         <section id="hours" class="col-sm-4">
           <span>Hours:</span><br>
-          Sun-Thurs: 11:00am - 11:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Sunday Closed
+          Sun-Thurs: 10:00am - 1:00am<br>
+          Fri: 11:15am - 2:30am<br>
+          Saturday Closed
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
